src/app/faqs/page.module.css
.main {
  height: 100vh;
  display: flex;
  color: #3e1117;
  justify-content: flex-end;
  align-items: flex-end;
  font-family: "PPLight";
  flex-direction: column;
}

.titleContainer {
  width: 50%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 60px;
  pointer-events: none;
}

.content {
  width: 50vw;
  height: 100vh;
  min-height: 100vh;
  padding: 80px;
  padding-top: 80px;
  background-color: rgb(255, 254, 248);
  margin: 0;
  gap: 20px;
  display: flex;
  flex-direction: column;
  font-size: 18px;
  justify-content: start;
  overflow-y: scroll;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
}

.question {
  font-size: 20px;
  font-style: italic;
}

.explainerText {
  font-size: 24px;
}

.buttons {
  width: 70%;
  min-width: 300px;
  min-height: 40px;
  padding: 10px;
  font-family: "CLight";
  border-radius: 6px;
  border: 1px solid white;
  background-color: rgb(255, 240, 247);
  color: #3e1117; /* Changed to brown text */
  font-size: 18px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
  transition: color 0.3s ease;
  cursor: pointer;
  margin: 20px;
  align-self: center;
}

.buttons::before {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background-color: #3e1117; /* Changed to brown fill */
  transition: left 0.3s ease;
  z-index: 1;
  color: white;
}

.buttons:hover::before {
  left: 0;
}

.buttons:hover {
  color: rgb(255, 240, 247); /* Changed to light text on hover */
}

.buttons span {
  position: relative;
  z-index: 2;
}

@media (max-width: 768px) {
  .main {
    flex-direction: column;
    overflow-y: auto;
    height: auto;

    overflow-x: none;
    min-height: 100vh;

    background-color: rgb(255, 254, 248);
  }
  .titleContainer {
    height: auto;
    position: relative;
    padding: 100px;
    overflow-x: none;
    width: 100%;
    font-size: 60px;
  }

  .content {
    width: 100%;
    height: auto;
    padding: 0 60px 80px 60px;
    margin: 0;
    gap: 20px;
    display: flex;
    flex-direction: column;
    font-size: 18px;
    justify-content: start;
    overflow-x: none;
  }
}

